--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,76 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* COMON */
+html {
+    font-family: 'Fredoka', sans-serif;
+    font-size: 100%;
+}
+
+h1 {
+    text-align: center;
+    padding: 1em;
+    color: #E53170;
+}
+
+p {
+    font-size: 1rem;
+    text-align: center;
+}
+body {
+    background-color: white;
+}
+
+.container {
+    width: 70%;
+    margin: 0 auto;
+}
+
+/* UTILITIES */
+.col {
+    width: calc(100% / 3);
+    float: left;
+    text-align: center;
+    margin: 50px;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* MAIN */
+/* Columns section */
+.column-section {
+    margin-bottom: 2em;
+}
+
+.column-section img {
+    height: 100px;
+}
+
+/* PROFILE BOXES */
+.profile {
+    width: 300px;
+    background-color: #0f0e17;
+}
+
+div>img{
+    float: left;
+}
+
+.name {
+    color: white;
+    font-size: 1.0rem;
+    float: left;
+    margin: 10px;
+}
+
+.job {
+    color: white;
+    font-size: 0.5rem;
+    float: left;
+    margin: 10px;
+}
